# othello

./: .gitmodules  CMakeLists.txt  CMakePresets.json  imgui.ini  test.pu
include/othello/app/display/: Display.hpp  GuiTrainDisplay.hpp
include/othello/app/display/backend/: DisplayBackend.hpp  Sdl3RendererDisplay.hpp  SdlError.hpp
include/othello/app/display/frontend/: DisplayFrontend.hpp  TrainDisplayGui.hpp
include/othello/core/: hello.hpp
src/: example.cpp  main.cpp  main_no_freeze.cpp  sdl_example.cpp
src/app/: main.cpp  othello_config.hpp.in
src/app/display/: GuiTrainDisplay.cpp
src/app/display/backend/: Sdl3RendererDisplay.cpp
src/app/display/frontend/: TrainDisplayGui.cpp
src/core/: hello.cpp
tests/core/: hello.cpp
